[tool.poetry]
name = "fastapi-blog"
version = "0.1.0"
description = ""
authors = ["sgaeng <ksge1124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.0"
uvicorn = "^0.20.0"
asyncpg = "^0.27.0"
greennet = "^0.1.0"
greenlet = "^2.0.2"
psycopg2-binary = "^2.9.5"
alembic = "^1.10.1"
black = "^22.12.0"
pyjwt = "^2.6.0"
boto3 = "^1.26.59"
types-boto3 = "^1.0.2"
mypy-boto3-s3 = "^1.26.58"
python-multipart = "^0.0.5"
asyncio = "^3.4.3"
httpx = "^0.23.3"
pytest = "^7.2.1"
anyio = "^3.6.2"
pytest-asyncio = "^0.20.3"
asgi-lifespan = "^2.0.0"
sqlalchemy = "^2.0.0"
pydantic = "^1.10.4"
python-dotenv = "^0.21.1"
contextvars = "^2.4"
async-property = "^0.2.1"
uvloop = "^0.17.0"
flake8-isort = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
